# d4d

./: README.md  example.py  pyproject.toml  requirements.txt  setup.py  visualize.py
d4d/: __init__.py  loader.py
docs/: index.html
